osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_experiments/test_experimentwhen_too_many_buckets.txt
error: unexpected bucket 'c', this bucket must match a bucket defined in experiment 'A'
--> main.sml:4:66
     |
   4 | EW = ExperimentWhen(control=[True, True, True], b=[True, True], c=[True], experiment=A)
     |                                                                   ^
--> (1) main.sml:3:34
     |
   3 | A = Experiment(entity=E1, buckets=['control', 'b'], bucket_sizes=[5, 5], version=1, revision=1)
     |                                   ^